slight changes, nothing important yet.

--- a/randomGame.html
+++ b/randomGame.html
@@ -2,8 +2,12 @@
 <html>
 	<head>
 		<title>This is a simulation of a random game</title>
+		<script src="./brain.js"></script>
 	</head>
 	<body>
 	HI THERE
+	<div>
+		<script src="./brain.js"></script>
+	</div>
 	</body>
 </html>
