--- a/randomGame.html
+++ b/randomGame.html
@@ -2,12 +2,22 @@
 <html>
 	<head>
 		<title>This is a simulation of a random game</title>
-		<script src="./brain.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.11/angular.min.js"></script>
 	</head>
 	<body>
 	HI THERE
-	<div>
-		<script src="./brain.js"></script>
+	<div ng-app="brain" ng-controller="chessController">
+		{{currentBoard}}
+		<button ng-model="nextMove">Next Move!</button>
+
+	<script>
+		var app = angular.module("brain", []);
+
+		app.controller("chessController", function($scope){
+			$scope.currentBoard = initGame();
+		})
+	</script>
+	<script src="brain.js"></script>
 	</div>
 	</body>
 </html>
