--- a/index.html
+++ b/index.html
@@ -3,18 +3,12 @@
 	<head>
 		<title>This is a simulation of a random game</title>
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.11/angular.min.js"></script>
-		<script type="text/javascript" script-src="app.js"></script>
+		<script type="text/javascript" src="app.js"></script>
 	</head>
 	<body>
 	HI THERE
-	<div ng-app="" ng-controller="chessController2">
+	<div ng-app="brainApp" ng-controller="chessController">
 		<p>{{currentBoard}}</p>
 		<button ng-model="nextMove">Next Move!</button>
 	</div>
-	<script type="text/javascript">
-		function chessController2($scope){
-			$scope.currentBoard = 5;
-		};
-	</script>
-	</body>
 </html>
