--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+<!DOCTYPE html5>
 <html>
 	<head>
 		<title>This is a simulation of a random game</title>
-		<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.11/angular.min.js"></script>
+		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.11/angular.min.js"></script>
 		<script type="text/javascript" src="./app.js"></script>
 	</head>
 	<body>
