--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html>
 	<head>
 		<title>This is a simulation of a random game</title>
-		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.11/angular.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.11/angular.min.js"></script>
 		<script type="text/javascript" src="./app.js"></script>
 	</head>
 	<body>
 	HI THERE
 	<div ng-app="brainApp" ng-controller="chessController">
-		<p>{{currentBoard}}</p>
-		<button ng-model="nextMove">Next Move!</button>
+		<br>{{newGame}}</br>
+		<br>{{squareA2}}</br>
+		<!-- <br>{{nextGame}}</br> -->
+		<button ng-click="">Next Move!</button>
 	</div>
 </html>
