I can now sim a random game in the console. Going to pretty it up so that I can see it in my html page, and then I'm going to get started on the ai part of this stuff.

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 	<body>
 	HI THERE
 	<div ng-app="brainApp" ng-controller="chessController">
-		<br>{{newGame}}</br>
-		<br>{{squareA2}}</br>
+		<br>{{gameFen}}</br>
+		<br>{{gameAscii}}</br>
+		<!-- <br>{{squareA2}}</br> -->
 		<!-- <br>{{nextGame}}</br> -->
-		<button ng-click="">Next Move!</button>
+		<button ng-click="nextMove()">Next Move!</button>
 	</div>
 </html>
