--- a/index.html
+++ b/index.html
@@ -2,17 +2,20 @@
 <html>
 	<head>
 		<title>This is a simulation of a random game</title>
-		<script src="bower_components/angular/angular.min.js"></script>
-		<!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.11/angular.min.js"></script>-->
+		<script src="./bower_components/angular/angular.min.js"></script>
+		<script src="./bower_components/jquery/dist/jquery.min.js"></script>
+		<script src="./bower_components/ng-grid/ng-grid-2.0.14.min.js"></script>
+		<link rel="stylesheet" type="text/css" href="./bower_components/ng-grid/ng-grid.min.css"></link>
 		<script type="text/javascript" src="./app.js"></script>
 	</head>
 	<body>
 	HI THERE
 	<div ng-app="brainApp" ng-controller="chessController">
-		<br>{{gameFen}}</br>
-		<br>{{gameAscii}}</br>
-		<!-- <br>{{squareA2}}</br> -->
-		<!-- <br>{{nextGame}}</br> -->
+		<p>{{gameFen}}</p>
+		<p>{{gameAscii}}</p>
 		<button ng-click="nextMove()">Next Move!</button>
+	</div>
+	<div ng-app="testGridApp" ng-controller="staticGridController">
+		<p ng-grid="gridTest"><p>
 	</div>
 </html>
