--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 		<title>This is a simulation of a random game</title>
 		<script src="./bower_components/angular/angular.min.js"></script>
 		<script src="./bower_components/jquery/dist/jquery.min.js"></script>
-		<script src="./bower_components/chessboardjs-0.3.0/js/chessboardjs-0.3.0.js"></script>
+		<script src="./bower_components/chessboardjs-0.3.0/js/chessboard-0.3.0.js"></script>
 		<link rel="stylesheet" type="text/css" href="./style.css" />
+		<link rel="stylesheet" type="text/css" href="./bower_components/chessboardjs-0.3.0/css/chessboard-0.3.0.css" />
 		<script type="text/javascript" src="./app.js"></script>
 	</head>
 	<body>
@@ -15,4 +16,8 @@
 		<p>{{gameAscii}}</p>
 		<button ng-click="nextMove()">Next Move!</button>
 	</div>
+	<div id="board1" style="width: 400px">
+	</div>
+	<script>var board1 = new ChessBoard('board1', 'start')</script>
+	</body>
 </html>
