--- a/content/index.html
+++ b/content/index.html
@@ -9,21 +9,20 @@
 		<link rel="stylesheet" type="text/css" href="./bower_components/chessboardjs-0.3.0/css/chessboard-0.3.0.css" />
 		<script type="text/javascript" src="./js/app.js"></script>
 	</head>
-	<body ng-app="brainApp">
+
+	<body ng-app="brainApp" ng-controller="chessController" ng-init="newGame()">
 
 	<title>Demonstration of Chess Engine</title>
 	
-	<div ng-controller="chessController">
+	<div>
 		<p style="visibility: hidden">{{gameFen}}</p>
-		<!-- <p>{{gameAscii}}</p> -->
 		<button ng-click="nextMove()">Next Move!</button>
-		<p>game in Ascii: {{gameAscii}}</p>
 	</div>
 
-	<div>
-	</div>
+	<div id="board1" style="width: 400px"></div>
+	<script>var board1 = new ChessBoard('board1', 'start')</script>
 	
 	<div>{{errorMessage}}</div>
-		
+	
 	</body>
 </html>
