Still working on getting the front end to sim a game for me. So close to working on the brain!

--- a/content/index.html
+++ b/content/index.html
@@ -19,8 +19,12 @@
 		<button ng-click="nextMove()">Next Move!</button>
 	</div>
 
+	<div>
+		<button ng-click="simRestOfGame()">Sim Remainder</button>
+	</div>
+
 	<div id="board1" style="width: 400px"></div>
-	<script>var board1 = new ChessBoard('board1', 'start')</script>
+	<script>//var board1 = new ChessBoard('board1', 'start')</script>
 	
 	<div>{{errorMessage}}</div>
 	
