working on making a random move via socket. Need to break and support moves as part of the games object.

--- a/TestClient/index.html
+++ b/TestClient/index.html
@@ -22,7 +22,7 @@
 			listen();
 
 			var randomMove = function(){
-				socket.emit('random Move', document.getElementById('gameid').text);
+				socket.emit('random move', document.getElementById('gameid').text);
 			};
 			var startGame = function(){
 				socket.emit('new game', null);
